# auto_repair_shop

./: README.md  manage.py  pyproject.toml  pytest.ini
auto_repair_shop/: asgi.py  settings.py  urls.py  wsgi.py
cars/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_alter_car_number.py  0003_alter_car_number.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_sparepartregister_amount.py  0003_alter_sparepartpurchase_purchase.py  0004_alter_order_final_bill.py  0005_alter_sparepartorder_order.py
tests/: conftest.py  factories.py  fixtures.py
tests/cars/: test_can_create_car.py  test_can_destroy_car.py  test_can_get_car.py  test_can_update_car.py
tests/orders/order/: test_can_create_order.py  test_can_destroy_order.py  test_can_get_order.py  test_can_update_order.py
tests/orders/purchase/: test_can_create_purchase.py  test_can_destroy_purchase.py  test_can_get_purchase.py  test_can_update_purchase.py
tests/orders/service_register/: test_can_create_service.py  test_can_destroy_service.py  test_can_get_service.py  test_can_update_service.py
tests/orders/spare_part_register/: test_can_create_spare_part.py  (+3 more)
tests/users/: test_can_create_user.py  test_can_destroy_user.py  test_can_get_user.py  test_can_update_user.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_requisites.py  0003_alter_user_passport_alter_user_requisites.py
